tests/errors/macro-token-tree-planned.ari
meta fn make_tokens(input: token_stream) -> token_stream {
}

fn main() -> i64 {
  let tokens = make_tokens!(fn generated_value(arg) -> i64 {
    return arg;
  });
  return 0;
}
